test/valid/fc34950_Cicles/ExampleOneMain.plume
/**
 * is a example of Executable.
 * @author namartins 
 * @version $Id: ExampleOneMain.plume 482 2012-06-04 19:07:29Z tcomp000 $ 
 *
 */
 
class ExampleOneMain extends Object is

	method main : () -> String is
		new ExampleOne(0).run(10).getResult().toString()